fixed contrast issues and external links

--- a/src/main.css
+++ b/src/main.css
@@ -60,10 +60,14 @@ a:hover {
     color: #939293;
 }
 
+#navbar a {
+    padding: 3px;
+}
+
 button.navbar-toggle {
     margin: 2px;
-    width: 6%;
-    height: auto;
+    width: 30px;
+    height: 25px;
     background: url(../images/burger-icon.png);
     background-size: 100%;
     border: none;
@@ -84,7 +88,7 @@ header {
 
 header img {
     max-width: 100%;
-    max-height: 200px;
+    max-height: 420px;
     min-width: auto;
     min-height: 100px;
     z-index: -1;
@@ -102,8 +106,8 @@ h1 {
 
 header h2 {
     position: absolute;
-    bottom: 0;
     left: 20px;
+    top: 1px;
     z-index: -1;
 }
 
@@ -182,6 +186,10 @@ section.portfolio {
     flex-direction: column;
 }
 
+h3 {
+    color: #B16558;
+}
+
 section.portfolio h2 {
     display: block;
 }
@@ -211,6 +219,10 @@ max-width: 80%;
 height: 200px;
 border: #B16558 2px solid;
 border-radius: 1%;
+}
+
+.portfolio a {
+    padding: 2px;
 }
 
 section.contact {
@@ -260,6 +272,20 @@ footer {
         top: 1px;
     }
 
+    header h2 {
+        position: absolute;
+        left: 20px;
+        top: 60px;
+    }
+
+    header img {
+        max-width: 100%;
+        max-height: 920px;
+        min-width: auto;
+        min-height: 300px;
+        z-index: -1;
+    }
+
     button.navbar-toggle {
         visibility: hidden;
     }
@@ -303,20 +329,6 @@ footer {
 }
 
 @media screen and (min-width: 1280px) {
-    header h2 {
-        position: absolute;
-        left: 20px;
-        top: 60px;
-    }
-}
-
-header img {
-    max-width: 100%;
-    max-height: 920px;
-    min-width: auto;
-    min-height: 300px;
-    z-index: -1;
-}
 
 p {
     font-size: 1.2rem;
@@ -328,4 +340,6 @@ section.about-me p {
 
 a {
     font-size: 1.4rem;
+}
+
 }
